# SummerCamp2018Homework

./: .gitignore  .travis.yml  README.md
ai/cnn/: README.md  convolutional_neural_network.py
ai/cnn/evaluation/: import.md
ai/cnn/huboni/: convolutional_neural_network.py
ai/cnn/童品模/: convolutional_neural_network.py
ai/gans/: README.md
ai/gans/hanpc/: generateMnistFromNoise.py
ai/gans/童品模/: generateMnistFromNoise.py
ai/nn/: README.md
ai/nn/evaluation/: eva.md
ai/nn/hanpc/: neural_network.py
ai/nn/heyu/: neural_network.py
ai/nn/huboni/: neural_network.py
ai/nn/童品模/: neural_network.py
ai/rg_lg/: README.md  linear_regression.py
ai/rg_lg/evaluation/: evaluate.py
ai/rg_lg/heyu/: logistic_regression_homework.py
ai/rg_lg/huboni/: logistic_regression-homework.py
ai/rg_lg/童品模/: logistic_regression_homework.py
ai/rg_lg/赵勇/: logistic_regression_homework.py
ai/unsupervised_learning/: README.md
ai/unsupervised_learning/huboni/: mat_mlab_pca.py  pca_test.py
cpp/cpp11/: README.md
cpp/cpp11/chenlin/: sum_multithread.cpp
cpp/cpp11/evaluation/: compile_failed.md  evaluate.sh  slow.md  syserror.md
cpp/cpp11/src/: main.cpp  src.pro  sum_multithread.cpp
cpp/cpp11/刘国晨/: sum_multithread.cpp
cpp/cpp11/徐磊/: sum_multithread.cpp
cpp/cpp11/李清/: sum_multithread.cpp
cpp/cpp11/李随城/: sum_multithread.cpp
cpp/cpp11/程宇琪/: sum_multithread.cpp  sum_multithread.h
cpp/cpp11/赵勇/: sum_multithread.cpp
cpp/helloc/: README.md
cpp/helloc/chenlin/: main.c
cpp/helloc/evaluation/: app_no_output.md  compile_failed.md  evaluate.sh  no_main.md  wrong_output.md
cpp/helloc/hanpc/: main.c
cpp/helloc/heyu/: main.c
cpp/helloc/huboni/: CMakeLists.txt  main.c
cpp/helloc/liqing/: CMakeLists.txt  main.cpp
cpp/helloc/src/: main.c  main.cpp  src.pro
cpp/helloc/刘国晨/: main.c
cpp/helloc/布树辉/: main.c
cpp/helloc/徐磊/: main.c
cpp/helloc/李清/: main.c  main.cpp
cpp/helloc/李随城/: main.c
cpp/helloc/王伟/: main.c
cpp/helloc/程宇琪/: a.out  main.c  test.c  test.out
cpp/helloc/童品模/: main.c
cpp/helloc/赵勇/: main.c
cpp/hellocpp/: README.md
cpp/hellocpp/chenlin/: student.h
cpp/hellocpp/evaluation/: evaluate.sh  funcschool.md  person.md
cpp/hellocpp/hanpc/: student.h
cpp/hellocpp/刘国晨/: student.h
cpp/hellocpp/布树辉/: inlinecheck.cpp  src.pro  student.h
cpp/hellocpp/徐磊/: student.h
cpp/hellocpp/李清/: student.h
cpp/hellocpp/李随城/: student.h
cpp/hellocpp/程宇琪/: main.cpp  student.h
cpp/hellocpp/赵勇/: student.h
cpp/simd/: README.md
cpp/simd/src/: Point.h  SO3SIMD.h  main.cpp  src.pro
cpp/stl/: README.md
cpp/stl/evaluation/: evaluate.sh  no_student.md  none.md  run_failed.md  score.txt  student.md
cpp/stl/刘国晨/: vector.h
cpp/stl/布树辉/: a.out  main.cpp  src.pro  vector.h
cpp/stl/李清/: vector.h
cpp/stl/李随城/: vector.h
cpp/stl/程宇琪/: vector.h
cpp/stl/赵勇/: vector.h
cpp/style/: README.md
cpp/style/evaluation/: cpplint_failed.md  error.md  evaluate.py  less.md  score.txt
cpp/style/huboni/: Point.h  SO3.h  VideoFrame.h
cpp/style/刘国晨/: Svar.h
cpp/style/徐磊/: GPS.h  Undistorter.h
cpp/style/程宇琪/: Dataset.h  GSLAM.h  Glog.h  VecParament.h
cpp/style/童品模/: Mutex.h  Random.h  SE3.h  SIM3.h
cpp/style/赵勇/: Undistorter.h
helloc/: Makefile  a.out  helloc  helloc.pro  test.c
hellopython/: t0001.py
python/hello_python/: README.md
python/hellopython/: README.md  sort.py
python/hellopython/chenlin/: sort.py
python/hellopython/evaluation/: evaluate.py  no_sort.md  none.md  timeout.md
python/hellopython/hanpc/: sort.py
python/hellopython/heyu/: sort.py
python/hellopython/huboni/: sort.py
python/hellopython/刘国晨/: sort.py
python/hellopython/徐磊/: sort.py
python/hellopython/李清/: sort.py
python/hellopython/李随城/: sort.py
python/hellopython/王伟/: sort.py
python/hellopython/程宇琪/: sort.py
python/hellopython/童品模/: sort.py
python/hellopython/赵勇/: sort.py
python/module/: README.md  data_analysis.py  test_package.py
python/module/chenlin/: test_package.py
python/module/evaluation/: evaluate.py  none_init.md  none_plot.md  wrong_output.md
python/module/hanpc/: data.txt
python/module/heyu/: test_package.py
python/module/huboni/: test_package.py
python/module/tongpinmo/: test_package.py
python/module/刘国晨/: test_package.py
python/module/徐磊/: test_package.py
python/module/李清/: test_package.py
python/module/李随城/: test_package.py
python/module/王伟/: test_package.py
python/module/程宇琪/: test_package.py
python/module/童品模/: test_package.py
python/module/赵勇/: test_package.py
python/more/: README.md  homework.ipynb  homework.py
python/more/.ipynb_checkpoints/: homework-checkpoint.ipynb
python/more/chenlin/: homework.py
python/more/evaluation/: evaluate.py  failed_run.md  none.md  wrong.md
python/more/hanpc/: homework.py  test.py
python/more/heyu/: homework.py
python/more/huboni/: homework.py
python/more/刘国晨/: homework.py
python/more/徐磊/: homework.py
python/more/李随城/: homework.py
python/more/王伟/: homework.py
python/more/程宇琪/: homework.py
python/more/童品模/: homework.py
python/more/赵勇/: homework.py
python/pythonmodule/: README.md  test_package.py
python/pythonmodule/evaluation/: evaluate.py  none.md  sort.md
python/pythonmodule/hanpc/: test_package.py
python/pythonmodule/tongpinmo/: test_package.py
scripts/: Evaluate.sh  README.md  UpdateForks.sh
slam/camera/: README.md
slam/cmake/: FindGSLAM.cmake  FindOpenCV.cmake
slam/geo2d3d/: README.md
slam/initialize/: README.md
slam/liegroup/: README.md
slam/match/: README.md
slam/opt_linear/: README.md
slam/opt_nolinear/: README.md
slam/tracking/: README.md
tool/cmake/: .README.md.swp  README.md
tool/cmake/chenlin/: CMakeLists.txt  FindHello.cmake
tool/cmake/刘国晨/: CMakeLists.txt  FindHello.cmake
tool/cmake/徐磊/: CMakeLists.txt  FindHello.cmake
tool/cmake/李清/: CMakeLists.txt
tool/cmake/李随城/: CMakeLists.txt  FindHello.cmake
tool/cmake/王伟/: CMakeLists.txt  FindHello.cmake
tool/cmake/程宇琪/: CMakeLists.txt  FindHello.cmake
tool/git/: README.md
tool/linux/: README.md  Statistics.sh
tool/markdown/: README.md
(+209 files in other folders)
